<resources>
    <string name="app_name">PASALACABRA</string>
    <string name="enlace">ENLAZAR</string>
    <string name="start">COMENZAR</string>
    <string name="desvincular">Desvincular</string>
    <string name="btnA">A</string>
    <string name="btnB">B</string>
    <string name="btnC">C</string>
    <string name="btnD">D</string>
    <string name="btnE">E</string>
    <string name="btnF">F</string>
    <string name="btnG">G</string>
    <string name="btnH">H</string>
    <string name="btnI">I</string>
    <string name="btnJ">J</string>
    <string name="btnK">K</string>
    <string name="btnL">L</string>
    <string name="btnM">M</string>
    <string name="btnN">N</string>
    <string name="btnNY">Ñ</string>
    <string name="btnO">O</string>
    <string name="btnP">P</string>
    <string name="btnQ">Q</string>
    <string name="btnR">R</string>
    <string name="btnS">S</string>
    <string name="btnT">T</string>
    <string name="btnU">U</string>
    <string name="btnV">V</string>
    <string name="btnW">W</string>
    <string name="btnX">X</string>
    <string name="btnY">Y</string>
    <string name="btnZ">Z</string>
    <string name="btnCodigoNovios">Inserta Codigo de Boda!</string>
    <string name="btnCheck">CHECK</string>
    <string name="btnCodigo">VER MENSAJE</string>
    <string name="textPregunta">Contesta correctamente todas las letras y consigue leer el mensaje.</string>
    <string name="respuesta">Responde aquí!</string>
    <string name="fondo">fondo!</string>
    <string name="textoMarcador">Marcador:</string>
    <string name="marcador">0</string>
    <string name="caras">caras!</string>
    <string name="codigosecreto">codigo secreto!</string>
    <string name="ENHORABUENA">ENHORABUENA!</string>
    <string name="mensaje">OS QUEREMOS!</string>
</resources>