<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/textPregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textPregunta"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintTop_toBottomOf="@id/textTitulo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <EditText
            android:id="@+id/editTextRespuesta"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="text"
            android:visibility="invisible"

            android:hint="@string/respuesta"
            android:autofillHints="@string/respuesta"
            app:layout_constraintBottom_toTopOf="@id/btnA"
            app:layout_constraintLeft_toLeftOf="@id/btnA" />

        <Button
            android:id="@+id/btnCheck"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btnCheck"
            app:layout_constraintRight_toRightOf="@id/btnE"
            app:layout_constraintBottom_toTopOf="@id/btnE"
            android:visibility="invisible"
            />


        <Button
            android:id="@+id/btnA"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnA"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@id/btnF"
            app:layout_constraintLeft_toLeftOf="@id/btnF"
            app:layout_constraintRight_toRightOf="@id/btnF"
            app:layout_constraintTop_toTopOf="@id/btnE" />

        <Button
            android:id="@+id/btnB"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnB"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@id/btnG"
            app:layout_constraintRight_toRightOf="@id/btnG"
            app:layout_constraintBottom_toTopOf="@id/btnG"
            app:layout_constraintTop_toTopOf="@id/btnE"
            />

        <Button
            android:id="@+id/btnC"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnC"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@id/btnH"
            app:layout_constraintRight_toRightOf="@id/btnH"
            app:layout_constraintBottom_toTopOf="@id/btnH"
            app:layout_constraintTop_toTopOf="@id/btnE"
            />

        <Button
            android:id="@+id/btnD"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnD"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@id/btnI"
            app:layout_constraintRight_toRightOf="@id/btnI"
            app:layout_constraintBottom_toTopOf="@id/btnI"
            app:layout_constraintTop_toTopOf="@id/btnE"
            />

        <Button
            android:id="@+id/btnE"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnE"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@id/btnJ"
            app:layout_constraintRight_toRightOf="@id/textPregunta"
            app:layout_constraintBottom_toTopOf="@id/btnJ"
            app:layout_constraintTop_toBottomOf="parent"
            />

        <Button
            android:id="@+id/btnF"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnF"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@id/btnK"
            app:layout_constraintRight_toRightOf="@id/btnK"
            app:layout_constraintBottom_toTopOf="@id/btnK"
            app:layout_constraintTop_toBottomOf="@id/btnA"
            />

        <Button
            android:id="@+id/btnG"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnG"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@id/btnL"
            app:layout_constraintRight_toRightOf="@id/btnL"
            app:layout_constraintBottom_toTopOf="@id/btnL"
            app:layout_constraintTop_toBottomOf="@id/btnB"
            />

        <Button
            android:id="@+id/btnH"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnH"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@id/btnM"
            app:layout_constraintRight_toRightOf="@id/btnM"
            app:layout_constraintBottom_toTopOf="@id/btnM"
            app:layout_constraintTop_toBottomOf="@id/btnC"
            />

        <Button
            android:id="@+id/btnI"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnI"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@id/btnN"
            app:layout_constraintRight_toRightOf="@id/btnN"
            app:layout_constraintBottom_toTopOf="@id/btnN"
            app:layout_constraintTop_toBottomOf="@id/btnE"
            />

        <Button
            android:id="@+id/btnJ"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnJ"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@id/btnNY"
            app:layout_constraintRight_toRightOf="@id/textPregunta"
            app:layout_constraintTop_toBottomOf="@id/btnE"
            app:layout_constraintBottom_toTopOf="@id/btnNY"
            />

        <Button
            android:id="@+id/btnK"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnK"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@id/btnO"
            app:layout_constraintRight_toRightOf="@id/btnO"
            app:layout_constraintTop_toBottomOf="@id/btnF"
            app:layout_constraintBottom_toTopOf="@id/btnO"
            />

        <Button
            android:id="@+id/btnL"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnL"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@id/btnP"
            app:layout_constraintRight_toRightOf="@id/btnP"
            app:layout_constraintBottom_toTopOf="@id/btnP"
            app:layout_constraintTop_toBottomOf="@id/btnG"
            />

        <Button
            android:id="@+id/btnM"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnM"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@id/btnQ"
            app:layout_constraintRight_toRightOf="@id/btnQ"
            app:layout_constraintBottom_toTopOf="@id/btnQ"
            app:layout_constraintTop_toBottomOf="@id/btnH"
            />

        <Button
            android:id="@+id/btnN"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnN"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@id/btnR"
            app:layout_constraintRight_toRightOf="@id/btnR"
            app:layout_constraintBottom_toTopOf="@id/btnR"
            app:layout_constraintTop_toBottomOf="@id/btnI"
            />

        <Button
            android:id="@+id/btnNY"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnNY"
            android:textSize="11sp"
            app:layout_constraintRight_toRightOf="@id/textPregunta"
            app:layout_constraintLeft_toLeftOf="@id/btnS"
            app:layout_constraintTop_toBottomOf="@id/btnJ"
            app:layout_constraintBottom_toTopOf="@id/btnS"
            />

        <Button
            android:id="@+id/btnO"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnO"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@id/btnT"
            app:layout_constraintRight_toRightOf="@id/btnT"
            app:layout_constraintTop_toBottomOf="@id/btnK"
            app:layout_constraintBottom_toTopOf="@id/btnT"
            />

        <Button
            android:id="@+id/btnP"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnP"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@id/btnU"
            app:layout_constraintRight_toRightOf="@id/btnU"
            app:layout_constraintBottom_toTopOf="@id/btnU"
            app:layout_constraintTop_toBottomOf="@id/btnL"
            />

        <Button
            android:id="@+id/btnQ"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnQ"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@id/btnV"
            app:layout_constraintRight_toRightOf="@id/btnV"
            app:layout_constraintBottom_toTopOf="@id/btnV"
            app:layout_constraintTop_toBottomOf="@id/btnM"
            />

        <Button
            android:id="@+id/btnR"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnR"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@id/btnW"
            app:layout_constraintRight_toRightOf="@id/btnW"
            app:layout_constraintBottom_toTopOf="@id/btnW"
            app:layout_constraintTop_toBottomOf="@id/btnM"
            />

        <Button
            android:id="@+id/btnS"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnS"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@id/btnX"
            app:layout_constraintRight_toRightOf="@id/textPregunta"
            app:layout_constraintBottom_toTopOf="@id/btnX"
            app:layout_constraintTop_toBottomOf="@id/btnNY"
            />

        <Button
            android:id="@+id/btnT"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnT"
            android:textSize="11sp"
            app:layout_constraintTop_toBottomOf="@id/btnO"
            app:layout_constraintRight_toLeftOf="@id/btnU"
            app:layout_constraintLeft_toLeftOf="@id/textPregunta"
            app:layout_constraintBottom_toTopOf="@id/btnY"
            />

        <Button
            android:id="@+id/btnU"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnU"
            android:textSize="11sp"
            app:layout_constraintTop_toBottomOf="@id/btnP"
            app:layout_constraintRight_toLeftOf="@id/btnV"
            app:layout_constraintLeft_toRightOf="@id/btnT"
            app:layout_constraintBottom_toTopOf="@id/btnZ"
            app:layout_constraintTop_toTopOf="@id/btnT"
            />

        <Button
            android:id="@+id/btnV"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnV"
            android:textSize="11sp"
            app:layout_constraintTop_toBottomOf="@id/btnQ"
            app:layout_constraintRight_toLeftOf="@id/btnW"
            app:layout_constraintLeft_toRightOf="@id/btnU"
            app:layout_constraintBottom_toTopOf="@id/btnCodigo"
            app:layout_constraintTop_toTopOf="@id/btnT"
            />

        <Button
            android:id="@+id/btnW"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnW"
            android:textSize="11sp"
            app:layout_constraintRight_toLeftOf="@id/btnX"
            app:layout_constraintTop_toBottomOf="@id/btnR"
            app:layout_constraintLeft_toRightOf="@id/btnV"
            app:layout_constraintBottom_toTopOf="@id/btnCodigo"
            app:layout_constraintTop_toTopOf="@id/btnT"
            />

        <Button
            android:id="@+id/btnX"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnX"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@id/btnCodigo"
            app:layout_constraintRight_toRightOf="@id/textPregunta"
            app:layout_constraintTop_toBottomOf="@id/btnS"
            app:layout_constraintTop_toTopOf="@id/btnT"
            />

        <Button
            android:id="@+id/btnY"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnY"
            android:textSize="11sp"
            app:layout_constraintRight_toLeftOf="@id/btnZ"
            app:layout_constraintTop_toBottomOf="@id/btnT"
            app:layout_constraintLeft_toLeftOf="@id/textPregunta"
            app:layout_constraintTop_toTopOf="@id/btnCodigo"
            />

        <Button
            android:id="@+id/btnZ"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:text="@string/btnZ"
            android:textSize="11sp"
            app:layout_constraintRight_toRightOf="@id/btnU"
            app:layout_constraintTop_toTopOf="@id/btnCodigo"
            app:layout_constraintLeft_toLeftOf="@id/btnU"
            />

        <Button
            android:id="@+id/btnCodigo"
            android:layout_width="190dp"
            android:layout_height="55dp"
            android:layout_marginBottom="40dp"
            android:text="@string/btnCodigo"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/btnV"
            app:layout_constraintRight_toRightOf="@id/textPregunta" />

        <TextView
            android:id="@+id/textoMarcador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoMarcador"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/marcador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marcador"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/textoMarcador"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/bolivar"
            app:layout_constraintTop_toBottomOf="@id/textPregunta"
            app:layout_constraintLeft_toLeftOf="@id/textPregunta"
            app:layout_constraintRight_toRightOf="@id/textPregunta"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>